[package]
name = "rumoca-phase-codegen"
description = "Template-based code generation phase for the Rumoca compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-ir-ast = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-ir-flat = { workspace = true }
rumoca-ir-core = { workspace = true }
rumoca-phase-dae = { workspace = true }
minijinja = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
