[package]
name = "rumoca-phase-dae"
description = "ToDae phase for the Rumoca Modelica compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
strict-ir-validation = [
    "rumoca-ir-flat/strict-ir-validation",
    "rumoca-ir-dae/strict-ir-validation",
]
tracing = ["dep:tracing"]

[dependencies]
rumoca-core = { workspace = true }
rumoca-eval-dae = { workspace = true }
rumoca-ir-flat = { workspace = true }
rumoca-ir-dae = { workspace = true }
indexmap = "2.2"
rustc-hash = { workspace = true }
serde = { workspace = true }
thiserror = "2.0"
miette = "7.4"
tracing = { workspace = true, optional = true }

[lints]
workspace = true
